--- a/hugo.toml
+++ b/hugo.toml
@@ -8,7 +8,7 @@ summaryLength = 60
   pagerSize = 20
   
 [params]
-  mainSections = ["posts", "longreads", "newsletters"]
+  mainSections = ["longreads", "newsletters"]
   
 [outputs]
   home = ["HTML", "RSS"]
