--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://KarelTestSpecial.github.io/Vegan-BioTech-Report/"
+baseURL = "https://kareltestspecial.github.io/Vegan-BioTech-Report/"
 title = "Vegan BioTech Report"
 theme = "ananke"
 defaultContentLanguage = "en"
