refactor(workflows): rename and organize workflows for clarity

--- a/.github/workflows/1-auto-generate-and-deploy.yml
+++ b/.github/workflows/1-auto-generate-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Monthly Content Generation and Deploy
+name: 1. [AUTO] Generate Content & Deploy
 
 # --- PERMISSIES VOOR DE HELE WORKFLOW ---
 permissions:
