--- a/.github/workflows/4-view-status.yml
+++ b/.github/workflows/4-view-status.yml
@@ -16,4 +16,4 @@ jobs:
           python-version: '3.11'
 
       - name: Run status command
-        run: python manage_content.py status
+        run: python3 -m pipeline.manage_content status
