--- a/.github/workflows/1-auto-generate-and-deploy.yml
+++ b/.github/workflows/1-auto-generate-and-deploy.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Generate Images with Gemini
         env:
           GEMINI_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-        run: python3 generate_images.py
+        run: python3 -m pipeline.generate_images
       - name: Commit and Push Generated Content
         run: |
           git config user.name "GitHub Actions Bot"
