fix(ci): Add write permissions to content management workflow

--- a/.github/workflows/5-manage-content-status.yml
+++ b/.github/workflows/5-manage-content-status.yml
@@ -17,6 +17,9 @@ on:
         required: false
         type: string
 
+permissions:
+  contents: write
+
 jobs:
   manage_content:
     runs-on: ubuntu-latest
