--- a/.github/workflows/1-auto-generate-and-deploy.yml
+++ b/.github/workflows/1-auto-generate-and-deploy.yml
@@ -33,7 +33,9 @@ jobs:
         with:
           python-version: '3.11'
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Run Content Generation Pipeline
         env:
           SITE_BASE_URL: "https://kareltestspecial.github.io/Vegan-BioTech-Report/"
@@ -43,7 +45,7 @@ jobs:
       - name: Generate Images with Gemini
         env:
           GEMINI_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
-        run: python3 pipeline/generate_images.py
+        run: python pipeline/generate_images.py
       - name: Commit and Push Generated Content
         run: |
           git config user.name "GitHub Actions Bot"
